starlark-rust/starlark_syntax/src/lexer_tests/string_lit.fail.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
'
'

Error:
error: Parse error: unfinished string literal
 --> x:1:1
  |
1 | '
  | ^
  |


Program:
"
"

Error:
error: Parse error: unfinished string literal
 --> x:1:1
  |
1 | "
  | ^
  |


Program:
this = a + test + r"

Error:
error: Parse error: unfinished string literal
 --> x:1:19
  |
1 | this = a + test + r"
  |                   ^^
  |


Program:
test + ' of thing that

Error:
error: Parse error: unfinished string literal
 --> x:1:8
  |
1 | test + ' of thing that
  |        ^^^^^^^^^^^^^^^
  |


Program:
test + ' of thing that
'

Error:
error: Parse error: unfinished string literal
 --> x:1:8
  |
1 | test + ' of thing that
  |        ^^^^^^^^^^^^^^^
  |
